--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,13 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-# ? ?? ???
 spring.h2.console.enabled=true
+
+# Mustache 인코딩
+spring.mustache.charset=UTF-8
+spring.mustache.servlet.content-type=text/html;charset=UTF-8
+
+# 서버 인코딩
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
+server.servlet.encoding.enabled=true
