--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ spring.mustache.servlet.content-type=text/html;charset=UTF-8
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
 server.servlet.encoding.enabled=true
+
+# Spring dev-tools
+spring.devtools.livereload.enabled=true
+spring.freemarker.cache=false
