--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ server.servlet.encoding.enabled=true
 # Spring dev-tools
 spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
+
+#application-oauth.properties 를 포함하도록 구성
+spring.profiles.include=oauth
