--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 spring.h2.console.enabled=true
+spring.session.store-type=jdbc
 
 # Mustache 인코딩
 spring.mustache.charset=UTF-8
@@ -26,3 +27,8 @@ spring.freemarker.cache=false
 
 #application-oauth.properties 를 포함하도록 구성
 spring.profiles.include=oauth
+
+#Test OAuth
+spring.security.oauth2.client.registration.google.client-id=test
+spring.security.oauth2.client.registration.google.client-secret=test
+spring.security.oauth2.client.registration.google.scope=profile,email
