--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.h2.console.enabled=true
 spring.session.store-type=jdbc
 
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
 # Mustache 인코딩
 spring.mustache.charset=UTF-8
 spring.mustache.servlet.content-type=text/html;charset=UTF-8
