--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,6 +22,34 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
+    - name: Cache Gradle packages
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
+
     # 빌드 실행
     - name: Build with Gradle
       run: ./gradlew clean build
+
+    # === Travis의 before_deploy에 해당 ===
+    - name: Zip artifact
+      run: |
+        zip -r freelec-springboot2-webservice *
+        mkdir -p deploy
+        mv freelec-springboot2-webservice.zip deploy/freelec-springboot2-webservice.zip
+
+    # === Travis의 deploy에 해당 (S3 업로드) ===
+    - name: Upload to S3
+      uses: aws-actions/s3-sync@v2
+      with:
+        bucket: freelec-springboot-build
+        region: ap-northeast-2
+        source-dir: deploy
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
