--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,6 +32,10 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-gradle-
 
+    # gradlew 실행 권한 부여
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
     # 빌드 실행
     - name: Build with Gradle
       run: ./gradlew clean build
