--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -48,12 +48,14 @@ jobs:
         mv freelec-springboot2-webservice.zip deploy/freelec-springboot2-webservice.zip
 
     # === Travis의 deploy에 해당 (S3 업로드) ===
-    - name: Upload to S3
-      uses: aws-actions/s3-sync@v2
+    # AWS 자격 증명 세팅
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4
       with:
-        bucket: freelec-springboot-build
-        region: ap-northeast-2
-        source-dir: deploy
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+        aws-region: ap-northeast-2
+
+    # S3 업로드 실행
+    - name: Upload to S3
+      run: aws s3 sync deploy s3://freelec-springboot-build --acl private
