--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+
       # 2. JDK 17 설정
       - name: Set up JDK 17
         uses: actions/setup-java@v4
