--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,7 +26,7 @@ jobs:
       # 3. Gradle 빌드
       - name: Build with Gradle
         run: ./gradlew clean build
-        working-directory: ./freelec-springboot2-webservice
+        working-directory: /home/ec2-user/actions-runner/_work/freelec-springboot2-webservice/freelec-springboot2-webservice
 
       # 3. 배포 스크립트 실행 (EC2 안에서)
       - name: Run deploy.sh
